--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,12 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# AWS / SageMaker
+.aws/
+*.pem
+*.key
+checkpoints/
+data/
+eval_output/
+*.tar.gz
