--- a/general-finetuning/requirements.txt
+++ b/general-finetuning/requirements.txt
@@ -25,6 +25,7 @@ click==8.3.0
 click-didyoumean==0.3.1
 click-plugins==1.1.1.2
 click-repl==0.3.0
+cloudpickle==3.1.1
 colorama==0.4.6
 configobj==5.0.9
 cryptography==46.0.2
@@ -33,6 +34,7 @@ dictdiffer==0.9.0
 dill==0.4.0
 diskcache==5.6.3
 distro==1.9.0
+docker==7.1.0
 dpath==2.2.0
 dulwich==0.24.4
 dvc==3.63.0
@@ -55,7 +57,11 @@ fsspec==2025.9.0
 funcy==2.0
 gitdb==4.0.12
 GitPython==3.1.45
+google-pasta==0.2.0
 grandalf==0.8
+graphene==3.4.3
+graphql-core==3.2.6
+graphql-relay==3.2.0
 gto==1.9.0
 h11==0.16.0
 hf-xet==1.1.10
@@ -64,26 +70,34 @@ httpx==0.28.1
 huggingface-hub==0.35.3
 hydra-core==1.3.2
 idna==3.11
+importlib-metadata==6.11.0
 iterative-telemetry==0.0.10
 Jinja2==3.1.6
 jmespath==1.0.1
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
 kombu==5.5.4
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
+mock==4.0.3
 mpmath==1.3.0
 multidict==6.7.0
-multiprocess==0.70.16
+multiprocess==0.70.18
 networkx==3.4.2
-numpy==2.2.6
+numpy==1.26.4
 omegaconf==2.3.0
 orjson==3.11.3
-packaging==25.0
+packaging==24.2
 pandas==2.3.3
+pathos==0.3.4
 pathspec==0.12.1
 platformdirs==4.5.0
+pox==0.3.6
+ppft==1.7.7
 prompt_toolkit==3.0.52
 propcache==0.4.1
+protobuf==6.31.1
 psutil==7.1.0
 pyarrow==21.0.0
 pycparser==2.23
@@ -99,26 +113,33 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
 PyYAML==6.0.3
+referencing==0.37.0
 regex==2025.9.18
 requests==2.32.5
 rich==14.2.0
+rpds-py==0.27.1
 ruamel.yaml==0.18.15
 ruamel.yaml.clib==0.2.14
 s3fs==2025.9.0
 s3transfer==0.14.0
 safetensors==0.6.2
+sagemaker==2.253.1
+sagemaker-core==1.0.59
+schema==0.7.8
 scmrepo==3.5.2
 semver==3.0.4
 shellingham==1.5.4
 shortuuid==1.0.13
 shtab==1.7.2
 six==1.17.0
+smdebug-rulesconfig==1.0.1
 smmap==5.0.2
 sniffio==1.3.1
 sqltrie==0.11.2
 starlette==0.48.0
 sympy==1.14.0
 tabulate==0.9.0
+tblib==3.1.0
 tokenizers==0.22.1
 tomlkit==0.13.3
 torch==2.8.0
@@ -137,3 +158,4 @@ wrapt==1.17.3
 xxhash==3.6.0
 yarl==1.22.0
 zc.lockfile==4.0
+zipp==3.23.0
